--- a/gen_pass/README
+++ b/gen_pass/README
@@ -8,14 +8,14 @@
 python2.5 и выше в стандартной комплектации.
 Для установки, скопируйте каталог с исходным текстом
 генератора паролия на локальную машину. 
-Все необходимые настройки находятся в файле conf.py
 
 #-------- ИПОЛЬЗОВАНИЕ ---------------------
 
-Для того, что бы сгенерировать новый пароль, 
-перейдите в каталог с программой и выполните 
-команду:
-$ python get_password.py
+Краткая инструкция программиста:
+
+Пример использования:
+
+import gen
 
 #-------- ФАЙЛЫ ----------------------------
 
