Удалил шлак, дописал немного документацию, закончил API для базовой работы

--- a/gen_pass/README
+++ b/gen_pass/README
@@ -7,20 +7,88 @@
 Для работы генератора пароля необходимо наличие
 python2.5 и выше в стандартной комплектации.
 Для установки, скопируйте каталог с исходным текстом
-генератора паролия на локальную машину. 
+генератора пароля на локальную машину. 
 
 #-------- ИПОЛЬЗОВАНИЕ ---------------------
 
-Краткая инструкция программиста:
+Краткая инструкция программиста по API генератора
+паролей. 
 
 Пример использования:
 
-import gen
+>>> import genpassword
+>>> p = genpassword
+>>> ls = p.read_file('Italian.dic')
+>>> dict_pass = p.dict_pass_rules(ls)
+>>> p.gen_password(dict_pass, 10)
+'sartertlen'
+>>> 
 
-#-------- ФАЙЛЫ ----------------------------
+Описание фукнций:
 
-get_password.py - после запуска возвращает пароль
-gen_password.py - содержит функцию генерации пароля
-gen_dict - содержит функции генерации словарей
-conf.py - файл настройки
-pererabotka.txt - файл с текстами для генерации словаря
+read_file(source_file) 
+Загружает текст из файла и возвращает список строк.
+В качестве аргумента принимает путь до файла на 
+жестком диске
+
+save_dict_in_file(dict_json, name_file)
+Сохраняет сгенерированный словарь правил на жесткий 
+диск. В качестве аргументов принимает словарь и имя 
+файла, в который словарь будет сохранен.
+
+get_dict_from_file(name_file)
+Читает словарь правил из файла. В качестве 
+аргумента принимает имя файла на жесктом диске, 
+где хранится словарь.
+
+gen_dict_first_smbs(liststring)
+Генерирует словарь правил первых двух символов будущего 
+пароля на основании обработанного текста. 
+В качестве аргументов принимает список строк.
+
+gen_dict_other_smb(liststring)
+Генерирует словарь правил, указывающий, как часто
+встречается тот или иной фильтр после определенной 
+комбинации двух предыдущих.
+В качестве аргументов принимает список строк.
+
+gen_dict_one_smb(liststring)
+Генерирует словарь правил, указывающий, как часто 
+встречатеся тот или иной символ перед предыдущим.
+В качестве аргументов принимает список строк.
+
+gen_dict_except_smb(liststring)
+Генерирует словарь, который подсчитывает, как часто
+встречается тот или иной символ в тексте. 
+Используется в функции dict_pass_rules(liststring)
+на тот случай, если комбинаци, описанные в словарях из
+функций  gen_dict_other_smb(liststring) и
+gen_dict_other_smb(liststring) не будет ни одного вхождения.
+Эта функция имеет высокую актуальность при генерации пароля,
+если исходный текст был небольшого размера. 
+В качестве аргумента принимает список строк.
+
+random_element(dictionary)
+Возвращает случайный ключ из словаря на основании
+его веса, указанного в значении элемента словаря. 
+Чем больше вес ключа, тем больше вероятность, что будет
+возвращен именно этот ключ.
+Принимает в качестве аргумента словарь вида {'a':1, 'm':2}
+
+gen_password(main_dict, lenth_pass)
+Возвращает пароль, сгенерированный на основании правил из 
+словаря после анализа текста. В качестве аргументов
+принимает словарь, сгенерированный фунукцией 
+dict_pass_rules(liststring), а также длину будущего пароля.
+
+dict_pass_rules(liststring)
+Собирает в один словарь результаты работы функций:
+gen_dict_first_smbs(liststring)
+gen_dict_other_smb(liststring)
+gen_dict_one_smb(liststring)
+gen_dict_except_smb(liststring)
+и возвращает словарь, подготовленный для работы с
+функцией dict_pass_rules(liststring).
+В качестве аргумента принимает список строк. 
+
+
