Подготвил пакет для установки, поправил документацию

--- a/gen_pass/README
+++ b/gen_pass/README
@@ -2,12 +2,16 @@
 #-------- ОПИСАНИЕ ГЕНЕРАТОРА ПАРОЛЯ -------
 ############################################
 
-#-------- УСТАНОВКА И НАСТРОЙКА ------------
+#-------- УСТАНОВКА ------------------------
 
 Для работы генератора пароля необходимо наличие
-python2.5 и выше в стандартной комплектации.
-Для установки, скопируйте каталог с исходным текстом
-генератора пароля на локальную машину. 
+python2.7(из-за модуля argparse) в стандартной 
+комплектации.
+Для установки, скопируйте архив с генератором, а
+затем распакуйте его. Перейдите в распакованный 
+каталог и выполните команду:
+
+$ sudo python setup.py install
 
 #-------- ИПОЛЬЗОВАНИЕ ---------------------
 
@@ -91,4 +95,7 @@ gen_dict_except_smb(liststring)
 функцией dict_pass_rules(liststring).
 В качестве аргумента принимает список строк. 
 
+Краткую инструкцию по использованию утилиты gen-pass вы
+можете увидеть, введя команду:
 
+$ gen-pass.py -h
