Добавил новый вариант генерации пароля, который проще в реализации, анализ на возможную повторяемость будет проходить на словарях, который генерирует именно этот вариант

--- a/gen_pass/README
+++ b/gen_pass/README
@@ -95,6 +95,10 @@ gen_dict_except_smb(liststring)
 функцией dict_pass_rules(liststring).
 В качестве аргумента принимает список строк. 
 
+TODO сделать описание функций:
+gen_dict_all_on_one(liststring):
+gen_password_with_none(main_dict, lenth_pass):
+
 Краткую инструкцию по использованию утилиты gen-pass вы
 можете увидеть, введя команду:
 
