Поправил авторство, указал лицензию

--- a/README
+++ b/README
@@ -10,3 +10,8 @@ $ gen-pass.py -d test.dic
 
 For example, source_text.txt may be get here:
 http://www.insidepro.com/rus/download.shtml
+
+Author and initiator of the idea is novel Imankulov.
+https://github.com/imankulov/
+
+License: GPLv3
